--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-# Logs
-logs
+# General
+.DS_Store
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
 *.local
+.env
+.env.*
+!.env.example
 
-# Editor directories and files
+# Node Modules
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Frontend Build output
+frontend/dist/
+frontend/dist-ssr/
+frontend/.vite/
+
+# Backend Build output
+backend/dist/
+
+# Editor specific
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+!.vscode/settings.json
+.idea/
