--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.15.0",
-    "rate-limit": "^0.1.1"
+    "rate-limit": "^0.1.1",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
